# appLog

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: AppLog.hpp
spdlog/include/spdlog/sinks/: file_sinks.h
src/: AppLog.cpp
test/: AppLogUsageExample.cpp  AppLogUsageExample.hpp  main.cpp  test_multi_thread_access.cpp
vs_sln/vs2019/: appLog.sln  open_appLog_template.bat
vs_sln/vs2019/appLog/: appLog.vcxproj  appLog.vcxproj.filters
vs_sln/vs2019/test/: test.vcxproj  test.vcxproj.filters
